<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlocParty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_on_board">OnBoardActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_no_thanks">No, Thanks</string>
    <string name="button_sign_in">Sign-in</string>
    <string name="desc_social_icon">SocialNetworkIcon</string>
    <string name="onboard_title_facebook">Facebook</string>
    <string name="onboard_message_facebook">See all the photos your Facebook friends post!</string>
    <string name="onboard_title_twitter">Twitter</string>
    <string name="onboard_message_twitter">View all the photos on your Twitter timeline!</string>
    <string name="onboard_title_instagram">Instagram</string>
    <string name="onboard_message_instagram">Browse your Instagram Feed!</string>
    <string name="app_id">1567189876857936</string>
    <string name="title_activity_feed_item_adapter">FeedItemAdapter</string>
    <string name="desc_feed_image">Image</string>
    <string name="desc_feed_profile_pic">Profile Picture</string>
    <string name="loading_message">Loading...</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="post_liked">Post Liked!</string>
    <string name="post_unliked">Post Unliked!</string>
    <string name="desc_like_button">Like Button</string>
    <string name="desc_pic_menu">Picture Menu</string>
    <string name="toast_onboard_complete">On-Boarding Complete!</string>
    <string name="error_request">Error Processing Request</string>
    <string name="toast_no_internet">No Internet Connection</string>
    <string name="popup_menu_save">Save Image to Gallery</string>
    <string name="popup_menu_add_to_collection">Add to Collection</string>
    <string name="bloc_party_image">A BlocParty Image</string>
    <string name="toast_saved_image">Image Saved to Gallery!</string>
    <string name="action_camera">Camera</string>
    <string name="action_filter">Filter</string>
    <string name="toast_no_camera">No Camera Available</string>
    <string name="title_upload_photo">Upload Photo</string>
    <string name="text_field_message">Message</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_submit">Submit</string>
    <string name="button_facebook">Facebook</string>
    <string name="button_twitter">Twitter</string>
    <string name="toast_no_facebook_session">No Active Facebook Session</string>
    <string name="toast_no_twitter_session">No Active Twitter Session</string>
    <string name="toast_image_uploaded">Image Uploaded!</string>
    <string name="title_dialog_collection">Choose Collection</string>
    <string name="title_activity_collection_list_item_adapter">CollectionListItemAdapter</string>
    <string name="title_choose_collection">Choose Collection</string>
    <string name="empty_collection">Add a Collection to Begin!</string>
    <string name="button_create_collection">Create Collection</string>
    <string name="title_collection">Collection Title</string>
    <string name="dialog_create_collection">Create Collection</string>
    <string name="toast_no_title">No Title Set</string>
    <string name="button_select_collection">Select Collection</string>
    <string name="title_dialog_add_to_collection">Add to Collection</string>
    <string name="toast_added_to_collection">Post added to Collection!</string>
    <string name="toast_contains_post">Collection Already Contains Post</string>

</resources>
