<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thin_border"
    tools:context="com.bloc.blocparty.ui.adapters.FeedItemAdapter">

    <RelativeLayout
        android:id="@+id/feedImageLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@android:color/background_dark"
        android:layout_margin="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/feedImage"
            android:contentDescription="@string/desc_feed_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>

        <ProgressBar
            android:id="@+id/progressBarMain"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/feedImageLayout"
        android:id="@+id/infoLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_marginBottom="@dimen/mini_margin"
            android:layout_marginRight="@dimen/mini_margin"
            android:layout_marginLeft="@dimen/mini_margin">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_feed_profile_pic"/>

            <ProgressBar
                android:id="@+id/progressBarProf"
                android:layout_centerInParent="true"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:layout_marginBottom="@dimen/mini_margin">

            <TextView
                android:id="@+id/nameField"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/descField"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameField"/>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/likeButton"
            android:background="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:contentDescription="@string/desc_like_button"
            android:layout_marginBottom="@dimen/mini_margin" />

        <ImageButton
            android:id="@+id/menuButton"
            android:src="@drawable/ic_three_dots"
            android:background="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:contentDescription="@string/desc_pic_menu"
            android:layout_marginBottom="@dimen/mini_margin"
            android:layout_marginRight="@dimen/mini_margin"/>

    </LinearLayout>

</RelativeLayout>
